--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -31,6 +31,9 @@ en:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
     passwords:
+      new:
+        email_placeholder: "Enter your email"
+        submit_button: "Email Instructions"
       no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
       send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
@@ -46,6 +49,15 @@ en:
       updated: "Your account has been updated successfully."
       updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
     sessions:
+      new:
+        label:
+          password: 'Password'
+          email: 'Email'
+        placeholder:
+          password: 'Enter password'
+          email: 'Enter email'
+        submit_button: 'Log in'
+        forgot_password: 'Forgot password?'
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
